--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,13 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
         driver: docker
+
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       if: env.SHOULD_PUSH == 'true'
@@ -30,6 +32,7 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Set environment variables
       run: |
         echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
@@ -106,33 +109,49 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]  # windows-latest
-        python_version: ['3.10']
+        python_version: ['3.13']
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
+
     - name: Install poetry
       run: pipx install poetry
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python_version }}
         cache: 'poetry'
+        #cache-dependency-path: |
+        #  pyproject.toml
+        #  poetry.lock
+
+    - name: Install system dependencies (Ubuntu)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-dev build-essential libffi-dev
+
     - name: Install dependencies
       run: |
         make build
-        poetry install --extras server --with dev
+        poetry install --extras server --extras pyinstaller --with dev
+
     - name: Build PyInstaller executable
       run: make build-server-exe
+
     - name: Test executable (Unix)
       if: runner.os != 'Windows'
       run: |
         ./dist/gptme-server --help
         echo "✅ gptme-server --help executed successfully"
+
     - name: Test executable (Windows)
       if: runner.os == 'Windows'
       run: |
         .\dist\gptme-server.exe --help
         echo "✅ gptme-server.exe --help executed successfully"
+
     - name: Upload executable artifact
       uses: actions/upload-artifact@v4
       with:
