--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -25,6 +25,9 @@ on:
 jobs:
   run-evals:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: read
     env:
       OWNER: ${{ github.repository_owner }}
       SUITE: ${{ github.event.inputs.suite || '' }}
@@ -33,9 +36,11 @@ jobs:
       IMAGE_SUFFIX: ${{ github.event.inputs.image-suffix || '' }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
       with:
         ref: eval-results
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
