--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ lxml = "*"
 json-repair = "^0.32.0"
 mcp = "^1.5.0"
 questionary = "^2.1.0"
+deprecated = "^1.2.18"
 
 # providers
 openai = "^1.0"
@@ -80,7 +81,8 @@ opentelemetry-instrumentation-flask = {version = "^0.55b1", optional=true}
 opentelemetry-instrumentation-requests = {version = "^0.55b1", optional=true}
 opentelemetry-exporter-otlp = {version = "^1.34.1", optional=true}
 opentelemetry-exporter-prometheus = {version = "^0.55b1", optional=true}
-deprecated = "^1.2.18"
+opentelemetry-instrumentation-anthropic = {version="^0.40.14", optional=true}
+opentelemetry-instrumentation-openai-v2 = {version="^2.1b0", optional=true}
 
 [tool.poetry.group.dev.dependencies]
 # lint
@@ -103,7 +105,7 @@ pytest-mock = "*"
 greenlet = "*"  # dependency of playwright, but needed for coverage
 
 # build
-pyinstaller = {version="^6.14", python=">=3.10,<3.13"}  # pyinstaller 6.0+ is required for Python 3.10, but not yet compatible with Python 3.12
+pyinstaller = {version="^6.15", python=">=3.10,<3.15"}  # not yet compatible with Python 3.15+
 
 # docs
 sphinx = "^8.0"
@@ -132,7 +134,12 @@ computer = []  # pillow (non-opt)
 youtube = ["youtube_transcript_api"]
 tts = ["sounddevice", "scipy", "numpy"]
 pyinstaller = ["pyinstaller"]
-telemetry = ["opentelemetry-api", "opentelemetry-sdk", "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests", "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus"]
+telemetry = [
+    "opentelemetry-api", "opentelemetry-sdk",
+    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
+    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
+    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai-v2",
+]
 all = [
     # server
     "flask", "flask-cors", "pydantic",
@@ -147,7 +154,10 @@ all = [
     # tts
     "sounddevice", "scipy", "numpy",
     # telemetry
-    "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests", "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
+    "opentelemetry-api", "opentelemetry-sdk",
+    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
+    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
+    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai-v2",
 ]
 
 [tool.ruff]
