--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -62,6 +62,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+        GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
       run: |
         mkdir -p ~/.config/gptme
         cat > ~/.config/gptme/config.toml << EOF
@@ -73,6 +74,7 @@ jobs:
         OPENAI_API_KEY = "$OPENAI_API_KEY"
         ANTHROPIC_API_KEY = "$ANTHROPIC_API_KEY"
         OPENROUTER_API_KEY = "$OPENROUTER_API_KEY"
+        GROQ_API_KEY = "$GROQ_API_KEY"
         EOF
         cat ~/.config/gptme/config.toml
         chmod -R o=rwx ~/.config/gptme
