--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,10 @@
 name = "gptme"
 version = "0.28.0"
 description = "Powerful AI agent for coding and general tasks. Terminal-first with shell, code execution, file editing, web browsing, vision, computer use. Unconstrained."
-authors = [
-    { name = "Erik Bjäreholt", email = "erik@bjareho.lt" },
-]
+authors = [{ name = "Erik Bjäreholt", email = "erik@bjareho.lt" }]
 readme = "README.md"
 license = "MIT"
-dynamic = ["dependencies"]  # "version"
+dynamic = ["dependencies"]                                                                                                                                                  # "version"
 
 [project.urls]
 Homepage = "https://gptme.org/"
@@ -24,9 +22,7 @@ gptme-nc = "gptme.ncurses:main"
 gptme-wut = "gptme.wut:main"
 
 [tool.poetry]
-packages = [
-    { include = "gptme" },
-]
+packages = [{ include = "gptme" }]
 include = ["gptme/server/static/**/*", "media/logo.png"]
 
 [tool.poetry.dependencies]
@@ -54,36 +50,36 @@ anthropic = "^0.47"
 # tools
 ipython = "^8.17.2"
 bashlex = "^0.18"
-playwright = {version = "1.49.1", optional=true}  # version constrained due to annoying to have to run `playwright install` on every update
-youtube_transcript_api = {version = "^0.6.1", optional=true}
-python-xlib = {version = "^0.33", optional=true}  # for X11 interaction
+playwright = { version = "1.49.1", optional = true }             # version constrained due to annoying to have to run `playwright install` on every update
+youtube_transcript_api = { version = "^0.6.1", optional = true }
+python-xlib = { version = "^0.33", optional = true }             # for X11 interaction
 
 # evals
 multiprocessing-logging = "^0.3.4"
-dspy = {version = "^3.0.2", python = "<=3.13", optional=true}
+dspy = { version = "^3.0.2", python = "<=3.13", optional = true }
 
 # datascience essentials
-pillow = {version = "*"}  # non-optional, needed for image scaling in vision
-matplotlib = {version = "*", optional=true}
-pandas = {version = "*", optional=true}
-numpy = {version = "*", optional=true}
-scipy = {version="*", optional=true}
-sounddevice = {version="^0.5.1", optional=true}
+pillow = { version = "*" }                            # non-optional, needed for image scaling in vision
+matplotlib = { version = "*", optional = true }
+pandas = { version = "*", optional = true }
+numpy = { version = "*", optional = true }
+scipy = { version = "*", optional = true }
+sounddevice = { version = "^0.5.1", optional = true }
 
 # server
-flask = {version = "^3.0", optional=true}
-flask-cors = {version = ">=4,<6", optional=true}
+flask = { version = "^3.0", optional = true }
+flask-cors = { version = ">=4,<6", optional = true }
 pydantic = "^2.11.7"
 
 # telemetry
-opentelemetry-api = {version = "^1.20.0", optional=true}
-opentelemetry-sdk = {version = "^1.20.0", optional=true}
-opentelemetry-instrumentation-flask = {version = "^0.55b1", optional=true}
-opentelemetry-instrumentation-requests = {version = "^0.55b1", optional=true}
-opentelemetry-exporter-otlp = {version = "^1.34.1", optional=true}
-opentelemetry-exporter-prometheus = {version = "^0.55b1", optional=true}
-opentelemetry-instrumentation-anthropic = {version="^0.40.14", optional=true}
-opentelemetry-instrumentation-openai-v2 = {version="^2.1b0", optional=true}
+opentelemetry-api = { version = "^1.20.0", optional = true }
+opentelemetry-sdk = { version = "^1.20.0", optional = true }
+opentelemetry-instrumentation-flask = { version = "^0.55b1", optional = true }
+opentelemetry-instrumentation-requests = { version = "^0.55b1", optional = true }
+opentelemetry-exporter-otlp = { version = "^1.34.1", optional = true }
+opentelemetry-exporter-prometheus = { version = "^0.55b1", optional = true }
+opentelemetry-instrumentation-anthropic = { version = "^0.40.14", optional = true }
+opentelemetry-instrumentation-openai-v2 = { version = "^2.1b0", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 # lint
@@ -103,10 +99,10 @@ pytest-dotenv = "^0.5.2"
 pytest-timeout = "^2.2.0"
 pytest-retry = "^1.6.3"
 pytest-mock = "*"
-greenlet = "*"  # dependency of playwright, but needed for coverage
+greenlet = "*"              # dependency of playwright, but needed for coverage
 
 # build
-pyinstaller = {version="^6.15", python=">=3.10,<3.15"}  # not yet compatible with Python 3.15+
+pyinstaller = { version = "^6.15", python = ">=3.10,<3.15" } # not yet compatible with Python 3.15+
 
 # docs
 sphinx = "^8.0"
@@ -130,41 +126,53 @@ tomli = "^2.2.1"
 [tool.poetry.extras]
 server = ["flask", "flask-cors", "pydantic"]
 browser = ["playwright"]
-datascience = ["matplotlib", "pandas", "numpy"]  # pillow (non-opt)
-computer = []  # pillow (non-opt)
+datascience = ["matplotlib", "pandas", "numpy"] # pillow (non-opt)
+computer = [] # pillow (non-opt)
 youtube = ["youtube_transcript_api"]
 tts = ["sounddevice", "scipy", "numpy"]
 pyinstaller = ["pyinstaller"]
 telemetry = [
-    "opentelemetry-api", "opentelemetry-sdk",
-    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
-    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
-    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai-v2",
+  "opentelemetry-api",
+  "opentelemetry-sdk",
+  "opentelemetry-exporter-otlp",
+  "opentelemetry-exporter-prometheus",
+  "opentelemetry-instrumentation-flask",
+  "opentelemetry-instrumentation-requests",
+  "opentelemetry-instrumentation-anthropic",
+  "opentelemetry-instrumentation-openai-v2",
 ]
-<<<<<<< HEAD
-=======
 dspy = ["dspy"]
->>>>>>> upstream/master
 all = [
-    # server
-    "flask", "flask-cors", "pydantic",
-    # browser
-    "playwright",
-    # datascience
-    "matplotlib", "pandas", "numpy", "scipy", # "pillow",
-    # computer
-    # "pillow",
-    # youtube transcript tool
-    "youtube_transcript_api",
-    # tts
-    "sounddevice", "scipy", "numpy",
-    # dspy prompt optimization
-    "dspy",
-    # telemetry
-    "opentelemetry-api", "opentelemetry-sdk",
-    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
-    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
-    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai-v2",
+  # server
+  "flask",
+  "flask-cors",
+  "pydantic",
+  # browser
+  "playwright",
+  # datascience
+  "matplotlib",
+  "pandas",
+  "numpy",
+  "scipy",      # "pillow",
+  # computer
+  # "pillow",
+  # youtube transcript tool
+  "youtube_transcript_api",
+  # tts
+  "sounddevice",
+  "scipy",
+  "numpy",
+  # dspy prompt optimization
+  "dspy",
+  # telemetry
+  "opentelemetry-api",
+  "opentelemetry-sdk",
+  "opentelemetry-exporter-otlp",
+  "opentelemetry-exporter-prometheus",
+  "opentelemetry-instrumentation-flask",
+  "opentelemetry-instrumentation-requests",
+  "opentelemetry-instrumentation-anthropic",
+  "opentelemetry-instrumentation-openai-v2",
 ]
 
 [tool.ruff]
@@ -213,11 +221,11 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "eval: marks tests as evals (deselect with '-m \"not eval\"'), these may fail, and will not run in CI",
-    "serial",
-    "timeout: marks tests with timeout value in seconds",
-    "requires_api: marks tests that require API access",
+  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+  "eval: marks tests as evals (deselect with '-m \"not eval\"'), these may fail, and will not run in CI",
+  "serial",
+  "timeout: marks tests with timeout value in seconds",
+  "requires_api: marks tests that require API access",
 ]
 
 [tool.coverage.run]
@@ -229,17 +237,17 @@ concurrency = ["greenlet"]
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
 exclude_also = [
-    # Don't complain if tests don't hit defensive assertion code
-    "raise NotImplementedError",
+  # Don't complain if tests don't hit defensive assertion code
+  "raise NotImplementedError",
 
-    # Don't complain about interactive stuff
-    "except KeyboardInterrupt:",
-    "if interactive:",
-    "if ask:",
+  # Don't complain about interactive stuff
+  "except KeyboardInterrupt:",
+  "if interactive:",
+  "if ask:",
 
-    # Don't complain if non-runnable code isn't run:
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
+  # Don't complain if non-runnable code isn't run:
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
 ]
 
 [build-system]
